# Incarnation-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake.yml
content/: .gitignore
content/debug/: debug-primitives.gltf
content/models/damaged-helmet/: DamagedHelmet.gltf
content/models/junk-shop/: junk-shop.gltf
content/models/metal-rough-spheres/: MetalRoughSpheres.gltf
content/models/sponza/: Sponza.gltf
content/models/sun-temple/: sun-temple.gltf
content/models/suzanne/: Suzanne.gltf
demo-dll/: CMakeLists.txt
demo-dll/inc/: backend-d3d12.h  common.h  d3d12layer.h  demo.h  mesh-utils.h  profiling.h  renderer.h  settings.h  shadercompiler.h
demo-dll/shaders/: base-pass.hlsl  cubemap-bg.hlsl  cubemapgen.hlsl  env-brdf-integration.hlsl  hdri.hlsl  hello-triangle.hlsl  hello.hlsl  imgui.hlsl  pbr.hlsli  prefilter-normal-roughness.hlsl  prefilter.hlsl  rootsig.hlsl  sh-accumulation.hlsl  sh-integration.hlsl  sh-projection.hlsl  spherical-harmonics.hlsli
demo-dll/shaders/rootsignatures/: rootsig.hlsl
demo-dll/src/: backend-d3d12.cpp  d3d12layer.cpp  demo.cpp  mesh-utils.cpp  profiling.cpp  renderer.cpp  shadercompiler.cpp
demo-exe/: CMakeLists.txt  main.cpp
ext/directXTex/lib/x64/debug/: DirectXTex.lib
ext/directXTex/lib/x64/release/: DirectXTex.lib
ext/dxc/: version.txt
ext/enkiTS/lib/debug/: enkiTS.lib
ext/enkiTS/lib/release/: enkiTS.lib
ext/microprofile/: microprofile.cpp
ext/spookyhash/inc/: spookyhash_api.h
ext/spookyhash/lib/: spookyhash.lib
source/demo-dll/: CMakeLists.txt
source/demo-dll/inc/: backend-d3d12.h  common.h  controller.h  demo.h  gpu-shared-types.h  mesh-material.h  mesh-utils.h  profiling.h  renderer.h  scene.h  shadercompiler.h  ui.h
source/demo-dll/shaders/: base-pass.hlsl  cubemap-bg.hlsl  envmap.hlsl  imgui.hlsl  pbr.hlsli  prefilter.hlsl  sampling.hlsli  sh-integration.hlsl  sh-projection.hlsl
source/demo-dll/shaders/common/: bxdf-sampling.hlsli  cluster-culling.hlsli  color-space.hlsli  math.hlsli  mesh-material.hlsli  sampling.hlsli  uniform-sampling.hlsli
source/demo-dll/shaders/content-pipeline/: cubemapgen.hlsl  prefilter-normal-roughness.hlsl
source/demo-dll/shaders/culling/: batch-culling.hlsl  light-culling.hlsl
source/demo-dll/shaders/debug-drawing/: api.hlsli  common.hlsli  drawcall-generation.hlsl  drawcall-submission.hlsl  line-submission.hlsl  primitive-generation.hlsl  primitive-submission.hlsl
source/demo-dll/shaders/environment-sky/: dynamic-sky-spherical-projection.hlsl  dynamic-sky.hlsl  envmap.hlsl  preetham.hlsl  preetham.hlsli
source/demo-dll/shaders/geo-raster/: base-pass.hlsl  encoding.hlsli  forward-pass.hlsl  foward-pass.hlsl  gbuffer-compute.hlsl  gbuffer-geo.hlsl  gbuffer-pass.hlsl  gbuffer-raster.hlsl  highlight-pass.hlsl  visibility-pass.hlsl
source/demo-dll/shaders/image-based-lighting/spherical-harmonics/: accumulation.hlsl  common.hlsli  export.hlsl  integration.hlsl  parallel-reduction.hlsl  projection.hlsl
source/demo-dll/shaders/image-based-lighting/split-sum-approx/: brdf-integration.hlsl  prefilter.hlsl
source/demo-dll/shaders/lighting/: clustered-lighting.hlsl  common.hlsli  direct-lighting.hlsl  pbr.hlsli  sky-lighting.hlsl
source/demo-dll/shaders/material/: common.hlsli
source/demo-dll/shaders/postprocess/: debug-visualization.hlsl  downsample.hlsl  hbao.hlsl  taa-resolve.hlsl  tonemap.hlsl
source/demo-dll/shaders/raytracing/: common.hlsli  pathtrace-integrate.hlsl  pathtracing.hlsl
source/demo-dll/shaders/ui/: envmap-preview.hlsl  sh-preview.hlsl
source/demo-dll/shaders/utils/: texture-copy-raster.hlsl
source/demo-dll/src/: backend-d3d12.cpp  demo-app.cpp  demo.cpp  mesh-utils.cpp  profiling.cpp  renderer.cpp  scene.cpp  shadercompiler.cpp  ui.cpp
source/demo-dll/src/render-jobs/: base-pass.inl  batch-culling.inl  clustered-lighting.inl  debug-visualization.inl  direct-lighting.inl  dynamic-sky.inl  environment-sky.inl  environmentmap.inl  forward-pass.inl  gbuffer-compute-pass.inl  gbuffer-pass.inl  gbuffer-raster-pass.inl  hbao.inl  highlight-pass.inl  job-sync.h  light-culling.inl  msaa-resolve.inl  path-tracing-resolve.inl  path-tracing.inl  post-process.inl  present.inl  sky-lighting.inl  taa-resolve.inl  tonemap.inl  ui-pass.inl  update-tlas.inl  visibility-pass.inl
source/demo-exe/: CMakeLists.txt  main.cpp
source/tracy-dll/: CMakeLists.txt
tools/: Tracy.bat
tracy-dll/: CMakeLists.txt
